--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "migration:down": "typeorm migration:revert -d ./dist/database/data-source.js"
   },
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "dotenv": "^17.0.1",
     "express": "^5.1.0",
     "mysql2": "^3.14.1",
