--- a/.example.env
+++ b/.example.env
@@ -7,3 +7,8 @@ DB_NAME="ecommerci_api"
 
 #API
 API_PORT=3000
+
+#AUTH
+JWT_SECRET=CHAVE_SUPER_SECRETA
+# 1m ou 1h ou 1d
+JWT_SECRET=TEMPO_EXPIRACAO
